--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,22 +1,30 @@
 {
-    "env": {
-        "browser": true,
-        "es2021": true
+    "parser": "@typescript-eslint/parser",
+    "parserOptions": {
+        "project": "tsconfig.json",
+        "tsconfigRootDir": "."
     },
     "extends": [
         "eslint:recommended",
-        "plugin:react/recommended"
+        "plugin:@typescript-eslint/eslint-recommended"
     ],
-    "parserOptions": {
-        "ecmaFeatures": {
-            "jsx": true
-        },
-        "ecmaVersion": 12,
-        "sourceType": "module"
-    },
-    "plugins": [
-        "react"
-    ],
+    "plugins": ["@typescript-eslint"],
     "rules": {
+        "complexity": ["error", { "max": 16 }],
+        "max-classes-per-file": ["error", 2],
+        "no-duplicate-imports": ["warn", { "includeExports": true }],
+        "no-trailing-spaces": "error",
+        "no-empty": "warn",
+        "prefer-const": "warn",
+        "no-prototype-builtins": "off",
+        "no-unused-vars": "off",
+        "@typescript-eslint/no-unused-vars": [
+            "error"
+        ]
+    },
+    "env": {
+        "browser": true,
+        "node": true,
+        "es6": true
     }
 }
