--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react": "^17.0.15",
     "@types/react-dom": "^17.0.9",
     "axios": "^0.21.1",
+    "clsx": "^1.1.1",
     "final-form": "^4.20.2",
     "formik": "^2.2.9",
     "node-sass": "^6.0.0",
