--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "@types/react-router-dom": "^5.1.8",
     "eslint": "^7.30.0",
     "eslint-plugin-react": "^7.24.0",
+    "redux-devtools-extension": "^2.13.9",
     "typescript": "^4.3.5"
   }
 }
