--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -10,6 +10,7 @@
     ],
     "plugins": ["@typescript-eslint"],
     "rules": {
+        "jsx-quotes": [2, "prefer-double"],
         "complexity": ["error", { "max": 16 }],
         "max-classes-per-file": ["error", 2],
         "no-duplicate-imports": ["warn", { "includeExports": true }],
