--- a/package.json
+++ b/package.json
@@ -32,7 +32,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -56,7 +58,9 @@
     "@types/react-router-dom": "^5.1.8",
     "eslint": "^7.30.0",
     "eslint-plugin-react": "^7.24.0",
+    "gh-pages": "^3.2.3",
     "redux-devtools-extension": "^2.13.9",
     "typescript": "^4.3.5"
-  }
+  },
+  "homepage": "http://mariyaudalova.github.io/orga_fresh_client"
 }
