--- a/package.json
+++ b/package.json
@@ -32,9 +32,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
@@ -61,6 +59,5 @@
     "gh-pages": "^3.2.3",
     "redux-devtools-extension": "^2.13.9",
     "typescript": "^4.3.5"
-  },
-  "homepage": "http://mariyaudalova.github.io/orga_fresh_client"
+  }
 }
